[refactor] 동호수 조회시 사용자의 defaultOfficeId 값과 일치하는 건물의 동호수만 조회
변경 사항 :
 - MyPageService 클래스 getBuildingInfo 메서드에 사용자의 defaultOfficeId와 조회하려는 동호수의 officeId가 일치하는지 검사하는 로직 추가